new(ajustes e centralização do base service client)

--- a/ScreenMusic.Web/Pages/Artist.razor
+++ b/ScreenMusic.Web/Pages/Artist.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Artistas"
 @using ScreenMusic.Arguments
-@inject ArtistAPI artistasAPI
+@inject ArtistServiceClient artistasAPI
 
 <MudStack Class="mt-4 mb-4" Row="true" Justify="Justify.SpaceBetween">
     <MudText Class="mb-4" Typo="Typo.h4">Artistas cadastrados</MudText>
