--- a/ScreenMusic.Web/Pages/CreateArtist.razor
+++ b/ScreenMusic.Web/Pages/CreateArtist.razor
@@ -1,6 +1,6 @@
 ﻿@page "/CadastrarArtista"
 @using ScreenMusic.Arguments
-@inject ArtistAPI artistasAPI
+@inject ArtistServiceClient artistasAPI
 @inject NavigationManager navigationManager
 
 <MudPaper Class="px-8 pt-2 pb-4 mx-12 my-8" Justify="Justify.Center">
