--- a/ScreenMusic.Web/Pages/MusicByArtist.razor
+++ b/ScreenMusic.Web/Pages/MusicByArtist.razor
@@ -1,6 +1,6 @@
 ﻿@page "/MusicasPorArtista"
 @using ScreenMusic.Arguments
-@inject MusicAPI musicasAPI
+@inject MusicServiceClient musicasAPI
 
 <MudStack Class="mt-4 mb-4" Row="true" Justify="Justify.SpaceBetween">
     <MudText Class="mb-4" Typo="Typo.h4">Músicas cadastradas</MudText>
