--- a/ScreenMusic.Web/Pages/UpdateArtist.razor
+++ b/ScreenMusic.Web/Pages/UpdateArtist.razor
@@ -1,6 +1,6 @@
 ﻿@page "/EditarArtista/{NomeArtista}"
 @using ScreenMusic.Arguments
-@inject ArtistAPI artistasAPI
+@inject ArtistServiceClient artistasAPI
 @inject NavigationManager navigationManager
 
 @if (Artist is not null)
