--- a/ScreenMusic.Web/Components/CardArtist.razor
+++ b/ScreenMusic.Web/Components/CardArtist.razor
@@ -10,7 +10,7 @@
             <MudText Typo="Typo.body2">@Artista!.Biography</MudText>
         </MudCardContent>
         <MudCardActions>
-            <MudButton Color="Color.Warning" Variant="Variant.Outlined" Href=@($"/Update/{Artista!.Name}")>Detalhes</MudButton>
+            <MudButton Color="Color.Warning" Variant="Variant.Outlined" Href=@($"/UpdateArtist/{Artista!.Name}")>Detalhes</MudButton>
         </MudCardActions>
     </MudCard>
 
