--- a/ScreenMusic.Web/Components/CardMusic.razor
+++ b/ScreenMusic.Web/Components/CardMusic.razor
@@ -12,7 +12,7 @@
         <MudCardActions>
             <MudButton Color="Color.Warning"
                        Variant="Variant.Outlined"
-                       Href=@($"/EditarMusica/{Musica!.Name}")>Detalhes</MudButton>
+                       Href=@($"/UpdateMusic/{Musica!.Name}")>Detalhes</MudButton>
         </MudCardActions>
     </MudCard>
 
