--- a/ScreenMusic.Web/Layout/NavMenu.razor
+++ b/ScreenMusic.Web/Layout/NavMenu.razor
@@ -2,12 +2,12 @@
 
     <MudNavLink Href="/" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavGroup Title="Artistas" Icon="@Icons.Material.Filled.People" Expanded="true">
-        <MudNavLink Href="/Artistas">Exibir</MudNavLink>
-        <MudNavLink Href="/CadastrarArtista">Cadastrar</MudNavLink>
+        <MudNavLink Href="/Artist">Exibir</MudNavLink>
+        <MudNavLink Href="/CreateArtist">Cadastrar</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Músicas" Icon="@Icons.Material.Filled.QueueMusic" Expanded="true">
-        <MudNavLink Href="/MusicasPorArtista">Músicas por artista</MudNavLink>
-        <MudNavLink Href="/MusicasPorGenero">Músicas por gênero</MudNavLink>
-        <MudNavLink Href="/CadastrarMusica">Cadastrar</MudNavLink>
+        <MudNavLink Href="/MusicByArtist">Músicas por artista</MudNavLink>
+        <MudNavLink Href="/MusicByMusicGender">Músicas por gênero</MudNavLink>
+        <MudNavLink Href="/CreateMusic">Cadastrar</MudNavLink>
     </MudNavGroup>
 </MudNavMenu>
