--- a/ScreenMusic.Web/Pages/UpdateArtist.razor
+++ b/ScreenMusic.Web/Pages/UpdateArtist.razor
@@ -1,4 +1,4 @@
-﻿@page "/EditarArtista/{NomeArtista}"
+﻿@page "/UpdateArtist/{Name}"
 @using ScreenMusic.Arguments
 @inject ArtistServiceClient artistasAPI
 @inject NavigationManager navigationManager
@@ -24,25 +24,26 @@
                           Required="true"
                           RequiredError="Campo obrigatório." />
 
-            <div class="d-flex align-center justify-space-between mt-4">
-                <MudButton Variant="Variant.Filled"
-                           Color="Color.Primary"
-                           Class="ml-auto"
-                           @onclick="Editar">
-                    Salvar
-                </MudButton>
-                <MudButton Variant="Variant.Filled"
-                           @onclick="Deletar"
-                           Color="Color.Secondary"
-                           Class="ml-3">
-                    Deletar
-                </MudButton>
+            <div class="d-flex justify-space-between align-center mt-4">
                 <MudButton Variant="Variant.Filled"
                            Color="Color.Info"
-                           Class="ml-3"
-                           @onclick="VoltarParaListagem">
+                           @onclick="Return">
                     Voltar
                 </MudButton>
+                <div>
+                    <MudButton Variant="Variant.Filled"
+                               Color="Color.Primary"
+                               Class="ml-3"
+                               @onclick="Update">
+                        Salvar
+                    </MudButton>
+                    <MudButton Variant="Variant.Filled"
+                               Color="Color.Secondary"
+                               Class="ml-3"
+                               @onclick="Delete">
+                        Deletar
+                    </MudButton>
+                </div>
             </div>
 
         </MudForm>
@@ -56,32 +57,32 @@ else
 @code {
     private string? name;
     private string? biography;
-    [Parameter]
-    public string? NameArtist { get; set; }
-
     public OutputArtist? Artist { get; set; }
+
+    [Parameter]
+    public string? Name { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        Artist = await artistasAPI.GetByName(new InputIdentifierArtist(NameArtist!));
+        Artist = await artistasAPI.GetByName(new InputIdentifierArtist(Name!));
         name = Artist!.Name;
         biography = Artist!.Biography;
     }
 
-    private async Task Deletar()
+    private async Task Delete()
     {
         await artistasAPI.Delete(Artist!.Id);
         navigationManager.NavigateTo("/Artist");
     }
 
-    private async Task Editar()
+    private async Task Update()
     {
         var requestEdit = new InputUpdateArtist(name!, biography!, Artist!.ProfilePhoto!);
         await artistasAPI.Update(Artist!.Id, requestEdit);
         navigationManager.NavigateTo("/Artist");
     }
 
-    private void VoltarParaListagem()
+    private void Return()
     {
         navigationManager.NavigateTo("/Artist");
     }
