--- a/ScreenMusic.Web/Pages/Artist.razor
+++ b/ScreenMusic.Web/Pages/Artist.razor
@@ -4,7 +4,7 @@
 
 <MudStack Class="mt-4 mb-4" Row="true" Justify="Justify.SpaceBetween">
     <MudText Class="mb-4" Typo="Typo.h4">Artistas cadastrados</MudText>
-    <MudPagination Count="@totalPage" SelectedChanged="PaginaMudou"></MudPagination>
+    <MudPagination Count="@totalPage" SelectedChanged="PageChange"></MudPagination>
 </MudStack>
 
 @if (ListArtistByPage is not null)
@@ -20,10 +20,10 @@
 }
 
 @code {
-    private ICollection<OutputArtist>? ListArtist;
     private int tamanho = 8;
     private int totalItem;
     private int totalPage;
+    private ICollection<OutputArtist>? ListArtist;
     private ICollection<OutputArtist>? ListArtistByPage;
 
     protected override async Task OnInitializedAsync()
@@ -34,16 +34,13 @@
             ListArtist = ListArtist.OrderByDescending(a => a.Id).ToList();
             totalItem = ListArtist.Count();
             totalPage = Convert.ToInt32(Math.Ceiling((totalItem * 1.0) / tamanho));
-            this.PaginaMudou(1);
+            this.PageChange(1);
         }
     }
 
-    private void PaginaMudou(int pageNumber)
+    private void PageChange(int pageNumber)
     {
         var indice = pageNumber - 1;
-        ListArtistByPage = ListArtist!
-            .Skip(tamanho * indice)
-            .Take(tamanho)
-            .ToList();
+        ListArtistByPage = ListArtist!.Skip(tamanho * indice).Take(tamanho).ToList();
     }
 }
